@@ -1,5 +1,6 @@
 2018-10-23  Daniel Hawkins
     * common/readable.c: Add "illuminated text" as a religion book name.
+    * server/c_object.c: Refactor a loop through the player's inventory to better use the op->contr->mark pointer.
 
 2018-10-22  Daniel Hawkins
     * random_maps/style.c: Remove superfluous use of buffer and snprintf.
